Added the searching and sorting functionality